syntax = "proto3";

package bongodb;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/iu7og/bongodb";

service BongoDB {
  rpc Set(KeyValueRequest) returns (google.protobuf.Empty) {}
  rpc Get(KeyRequest) returns (ValueResponse) {}
  rpc Delete(KeyRequest) returns (google.protobuf.Empty) {}
  rpc Truncate(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message KeyValueRequest {
  google.protobuf.StringValue key = 1;
  google.protobuf.StringValue value = 2;
}

message KeyRequest {
  google.protobuf.StringValue key = 1;
}

message ValueResponse {
  google.protobuf.StringValue value = 1;
}
